some modifications added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>VegShoes</title>
   <link rel="icon" href="img/Logo.svg"></link>
- <link rel="stylesheet" href="/css/style.css">
+ <link rel="stylesheet" href="css/style.css">
 <script src="https://kit.fontawesome.com/07fd297c3b.js" crossorigin="anonymous"></script>
 
 </head>
@@ -11,7 +11,7 @@
   <div class="banner"><p>ELE CHEGOU!! Nosso VegApp 📱</p></div>
   <header>
 
-    <img class="logo" src="/img/Logo.svg" alt="Logo"> 
+    <img class="logo" src="img/Logo.svg" alt="Logo"> 
     <nav>
       <ul>
         <li><a href="#">Novidades</a></li>
@@ -22,18 +22,18 @@
     </nav>
 
       <ul class="icon-menu">
-        <li> <a href=""> <img src="img/Vector.svg" alt="" class="img"> </a>  </li>
-        <li> <a href=""> <img src="img/🦆 icon _heart outline_.svg" alt="" class="img"> </a> </li>
-        <li> <a href=""> <img src="img/🦆 icon _person outline_.svg" alt="" class="img"></a>  </li>
-        <li> <a href=""> <img src="img/🦆 icon _location_.svg" alt="" class="img"></a> </li> 
+        <li> <a href=""> <img src="img/🦆 icon _search outline_.svg" alt="" class="img"> </a>  </li>
+        <li> <a href=""> <img src="img/🦆 icon _person_.svg" alt="" class="img"> </a> </li>
+        <li> <a href=""> <img src="img/🦆 icon _heart_.svg" alt="" class="img"></a>  </li>
+        <li> <a href=""> <img src="img/🦆 icon _compass_.svg" alt="" class="img"></a> </li> 
       </ul>  
  
   </header>
 
   <div id="slideshow-container">
-    <img class="slide active" src="/img/girl-with-red-hat-4TQrrIFK9Xs-unsplash 1.png" alt="Imagem 1">
-    <img class="slide" src="/img/girl-with-red-hat-cSkifiYMkWs-unsplash 1.png" alt="Imagem 2">
-    <img class="slide" src="/img/girl-with-red-hat-tbdCaCSet9k-unsplash 1.png" alt="Imagem 3">
+    <img class="slide active" src="img/girl-with-red-hat-4TQrrIFK9Xs-unsplash 1.png" alt="Imagem 1">
+    <img class="slide" src="img/girl-with-red-hat-cSkifiYMkWs-unsplash 1.png" alt="Imagem 2">
+    <img class="slide" src="img/girl-with-red-hat-tbdCaCSet9k-unsplash 1.png" alt="Imagem 3">
   </div>
 
   <div class="menu">
@@ -47,49 +47,103 @@
   <div class="container1">
     <div class="image-container">
     
-        <img src="/img/imagem1.png" alt="Imagem 1">
-        <img class="hover-image" src="/img/imagem2.png" alt="Imagem 2">
-        <img class="hover-image" src="/img/imagem3.png" alt="Imagem 3">
+        <img src="img/imagem1.png" alt="Imagem 1">
+        <img class="hover-image" src="img/imagem2.png" alt="Imagem 2">
+        <img class="hover-image" src="img/imagem3.png" alt="Imagem 3">
 
     </div>
   </div>
    
   <div class="image-container">
   
-    <img src="/img/imagem4.png" alt="Imagem ">
-    <img class="hover-image" src="/img/imagem5.png" alt="Imagem 5">
+    <img src="img/imagem4.png" alt="Imagem ">
+    <img class="hover-image" src="img/imagem5.png" alt="Imagem 5">
     <img class="hover-image" src="/img/imagem6.png" alt="Imagem 6">
 
   </div>
 
   <div class="image-container">
   
-    <img src="/img/imagem7.png" alt="Imagem ">
-    <img class="hover-image" src="/img/imagem8.png" alt="Imagem 5">
-    <img class="hover-image" src="/img/imagem9.png" alt="Imagem 6">
+    <img src="img/imagem7.png" alt="Imagem ">
+    <img class="hover-image" src="img/imagem8.png" alt="Imagem 5">
+    <img class="hover-image" src="img/imagem9.png" alt="Imagem 6">
 
   </div>
 
   <div class="image-container">
   
-    <img src="/img/imagem10.png" alt="Imagem ">
-    <img class="hover-image" src="/img/imagem11.png" alt="Imagem 5">
-    <img class="hover-image" src="/img/imagem12.png" alt="Imagem 6">
+    <img src="img/imagem10.png" alt="Imagem ">
+    <img class="hover-image" src="img/imagem11.png" alt="Imagem 5">
+    <img class="hover-image" src="img/imagem12.png" alt="Imagem 6">
 
   </div>
 
   <section class="banner1">
 
     <div class="banner-container">
-      <img class="banner-image" src="/img/Banner2.png" alt="Banner">
+      <img class="banner-image" src="img/Banner2.png" alt="Banner">
       <button class="action-button" onclick="window.location.href='outra_pagina.html';">Encontrar presente</button>
     </div>
   </section>
 
+  <div class="image-container1">
+    <img src="img/PinLogo.svg" alt="Imagem 1">
+    <p>Loja Oficial <br> VegShoes</p>
+  </div>
+  <div class="image-container1">
+    <img src="img/PinPercent.svg" alt="Imagem 2">
+    <p>5% off na <br> primeira compra</p> 
+  </div>
+  <div class="image-container1">
+    <img src="img/PinCard.svg" alt="Imagem 3">
+    <p>Em até 6x <br> sem juros*</p>
+  </div>
+  <div class="image-container1">
+    <img src="img/PinLocation.svg" alt="Imagem 4">
+    <p>Entrega para <br> todo o Brasil</p>
+  </div>
  
+ <footer id="footer">
+  <div class="textos">
+    <h1>Minha conta</h1>
+    <h2><a href="">Meu perfil</a> </h2>
+    <h2><a href=""> Meus pedidos</a></h2>
+  </div>
 
-<script src="/script/script.js"></script>
+  <div class="textos1">
+    <h1>Sobre</h1>
+    <h2><a href="">Política de privacidade</a> </h2>
+    <h2><a href=""> Termos de uso</a></h2>
+    <h2><a href=""> Gerenciamento de Cookies</a></h2>
+    <h2><a href=""> Política de trocas</a></h2>
+  </div>
+
+  <div class="textos1">
+    <h1>Atendimento ao Cliente</h1>
+    <h2><a href="">Devoluções</a> </h2>
+    <h2><a href="">Informações de entrega</a></h2>
+    <h2><a href="">FAQ/ Fale conosco</a></h2>
+    <h2><a href="">Tabela de medidas</a></h2>
+  </div>
+
+  <div class="icons">
+    <img src="img/🦆 icon _facebook outline_.svg" alt="">
+    <img src="img/🦆 icon _twitter outline_.svg" alt="">
+    <img src="img/🦆 icon _instagram_.svg" alt="">
+    <img src="img/tiktok.svg" alt="">
+  </div>
+
+  <div class="texto1">
+    <h2>VegShoes S.A</h2>
+    <h2>(19)9999-9999 / vegshoes@example.com</h2>
+    <h2>CNPJ 0012345120/0001-00</h2>
+    <h2>Rua do plástico,1991 - Centro-SP</h2>
+  </div>
+ </footer>
+
+<script src="script/script.js"></script>
   <!-- Resto do conteúdo da página -->
 
 </body>
+
 </html>
